--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,5 +24,11 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+          stages {
+        stage('Complete') {
+            steps {
+                echo 'Job complete'
+            }
+        }
     }
 }
